tests/baselines/reference/externalModuleExportingGenericClass.errors.txt
externalModuleExportingGenericClass_file1.ts(2,8): error TS2314: Generic type 'C<T>' requires 1 type argument(s).


==== externalModuleExportingGenericClass_file1.ts (1 errors) ====
    import a = require('./externalModuleExportingGenericClass_file0');
    var v: a; // this should report error
           ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    var v2: any = (new a()).foo;
    var v3: number = (new a<number>()).foo;
    
==== externalModuleExportingGenericClass_file0.ts (0 errors) ====
    class C<T> {
        foo: T;
    }
    export = C;
    
    